# ml-ethereum_from_coinbased_in_realtime

./: Makefile  README.md  pyproject.toml
notebooks/: 01_load_data_from_websocket.ipynb
src/helpers/: config.py  feature_store_api.py
src/pipelines/: feature_pipeline.py
src/visualization/: frontend.py  plot.py
